WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280101
hasRequestedPermission isn't populating permission properties
https://bugs.webkit.org/show_bug.cgi?id=280101
Summary
hasRequestedPermission isn't populating permission properties
Jamie Murphy
Reported
2024-09-20 18:25:57 PDT
In WebExtension.c, the hasRequestedPermission function doesn't call populatePermissionPropertiesIfNeeded, meaning that it's possible to check for requested permissions while no permissions have been populated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-20 18:26:06 PDT
<
rdar://problem/136398245
>
Timothy Hatcher
Comment 2
2024-10-04 13:58:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34714
EWS
Comment 3
2024-10-04 15:36:26 PDT
Committed
284706@main
(ed736e615ab9): <
https://commits.webkit.org/284706@main
> Reviewed commits have been landed. Closing PR #34714 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug