hasRequestedPermission isn't populating permission properties. https://webkit.org/b/280101 rdar://problem/136398245

Reviewed by Brian Weinstein.

* Source/WebKit/UIProcess/Extensions/WebExtension.cpp:
(WebKit::WebExtension::hasRequestedPermission): Call populatePermissionsPropertiesIfNeeded().
* Source/WebKit/UIProcess/Extensions/WebExtension.h: Drop const on hasRequestedPermission()
so it can call non-const populatePermissionsPropertiesIfNeeded().

Canonical link: https://commits.webkit.org/284706@main